--- a/link02.html
+++ b/link02.html
@@ -50,7 +50,7 @@
 
 
 House of Cards《纸牌屋》 is an American political drama series developed and produced by Beau Willimon.Based on House of Cards by Michael Dobbs and the Composer is Jeff Beal.<br><br>
-<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>
 更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
 <a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
@@ -63,6 +63,7 @@ House of Cards《纸牌屋》 is an American political drama series developed and pro
 六祖慧能《六祖坛经》: shadow of shadows  <br><br>
 
 因为其师兄神秀的偈：身似菩提树，心似明镜台，时时勤拂拭，勿使惹尘埃 。六祖感觉禅悟不彻底，于是吟出了：菩提本无树,明镜亦非台,本来无一物,何处惹尘埃 。 <br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 House Majority Whip，好像东德的Mielke，疏通下水道。<br><br>
 
@@ -94,6 +95,7 @@ Doug Stamper, Underwood's Chief of Staff and confidant.<br><br>
 Linda Vasquez, the President's White House Chief of Staff.<br><br>
 
 ##如此说来，《House of Cards》体现了我们的领导不但没有品味，而且缺乏见识。几年前，下届常委曾推荐新书《论语别裁》。果真文革组无人可用也？我不知道...##<br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 EXT. UNDERWOOD RESIDENCE - NIGHT<br><br>
 SLOWLY PULL IN on the front door of a fashionable DC townhouse.<br><br>
@@ -185,6 +187,7 @@ Welcome to Washington.<br><br>
 The episode opens with U.S. Representative Francis "Frank" J. Underwood (Kevin Spacey) exiting his house after hearing a crash and animal noises, to find his neighbour's dog lying in the road, whimpering in agony, and the vehicle that hit it speeding away. While his driver, who also witnessed the incident, goes to get the neighbours who own the dog, Frank gently shushes the dog, noting that it will not survive its injuries. Deciding to end its suffering, Frank calmly proceeds to strangle the dog. Much of Underwood's dialogue throughout the episode is presented in a direct address to the audience, a narrative technique that breaks the fourth wall.<br><br>
 
 Underwood, an ambitious Democratic congressman and the House Majority Whip, then finishes getting ready to attend a Gala celebrating the victory of Garrett Walker (Michael Gill), upon his election as President of the United States. He was a vital ally during Walker's campaign, and was promised the position of Secretary of State in return. However, before Walker is sworn in, Chief of Staff Linda Vasquez (Sakina Jaffrey) announces that the president will not honor the agreement and will instead nominate Senator Michael Kern (Kevin Kilner), relegating Underwood to tasks such as helping guide new legislation through Congress in support of the agenda in the first 100 days. Furious at Walker's betrayal, Underwood and his wife Claire (Robin Wright), an environmental activist, make a pact to destroy Kern. Underwood, with the assistance of his Chief of Staff, Doug Stamper, (Michael Kelly) begins seeking out pawns in his war against Walker. Underwood also encounters Zoe Barnes (Kate Mara), a young, opportunistic political reporter for the Washington Herald newspaper. Without understanding what she is getting into, Barnes uses her fortunate appearance in a photo with Underwood as an entre to make his acquaintance. When the troubled Rep. Peter Russo (Corey Stoll) is arrested for drunk driving, Underwood offers him a reprieve in exchange for his loyalty. Eventually Underwood and Barnes come to an agreement where Underwood will give Barnes inside information.<br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 2010年2月，William D. Cohen写了一本书，名字就是《House of Cards》,讲的是华尔街次债危机。老实说，最初我以为今年热映的电视剧《House of Cards》，就是根据我看的这本书改编的，当时心里还犯嘀咕，衍生证券、兼并收购那么枯燥的玩意能拍得好，好到“万人空巷”的程度？结果证明我的猜测是错的。美国的这部同名电视剧，不是根据Cohen的书改编的，而是根据1990年英国同名的电视剧改编的，而英国的电视剧又是根据1989年Michael Dobbs同名畅销小说改编的。<br><br>
 
@@ -226,6 +229,7 @@ Anthony Howard of The Times said "Dobbs is following in a respectable tradition.
 
 Dobbs is now a full-time writer, and divides his time between London and Wiltshire. He has two sons from his first marriage and two step-sons with his second wife, Rachel.<br><br>
 
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 
 原作者Michael Dobbs更为著名的是 Winston's War: A Novel of Conspiracy，更为真实精彩。<br><br>
