--- a/link03.html
+++ b/link03.html
@@ -63,6 +63,7 @@ Severn Cullis-Suzuki was born and raised in Vancouver, British Columbia. Her mot
 文革期间，王沪宁没有下乡精通法语、万钢下乡搞定德语、刘亚洲参军学会英语。所以，要至少一门外语。最差也要像李嘉诚一样学点粤语吧？Hong Kong News Agora<br><br>
 
 不是去求学，而是抢知识啊！李嘉诚曹德旺凭借一本辞海自学，一样顶天立地！<br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 Hello, I'm Severn Suzuki speaking (in English) for E.C.O. Environmental Children's Organisation. <br><br>
 We are a group of twelve and thirteen-year-olds from Canada trying to make a difference:  Vanessa Suttie, Morgan Geisler, ichelle Quigg and me. We raised all the money ourselves to come six thousand miles to tell you adults you must change your ways. Coming here today, I have no hidden agenda. I am fighting for my future.<br><br>
