--- a/pic08.html
+++ b/pic08.html
@@ -27,57 +27,60 @@
 <head>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
-	<!-- Try this way:  <meta http-equiv="Content-Type" content="text/html" charset="gb2312"/> -->
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-	<title>Read Text</title>
+	<title>PictureOrigin</title>
 	<meta name="Author" content="Roban">
-	<meta name="Keywords" content="Retter2012.com">
+	<meta name="Keywords" content="Retter2012">
 	
-
 </head>
 
 <body bgcolor= "white" background= "" text="black" link="silver" alink="navy" vlink="red">
 	<center>
-	<br><a href= "home.html">返回主页</a><br>
+	<br><a href= "home.html">返回主页</a>
 	<font size=7>
-	图片资料汇编<br><br>
+	<br>路姆西（Lufsig）和摩西（Moses）<br>
 	</font>	
+	
+	<font size=5>
+	
+	
+	<img src="img/Lu.png" alt="浏览器不能显示" >	 
+
 	</center>
 
-	<font size=5>
 
-<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<br><br>
+路姆西（Lufsig）：「路姆西」由德國設計師Silke Leffler設計，靈感來自格林童話《小紅帽》中大野狼吃掉小紅帽祖母和小紅帽，獵人把大野狼肚子破開救出兩人，而「路姆西」身軀亦設計成中空，並配同祖母公仔出售。 <br><br>
+
+另外，您可曾看过《摩西五经》？关于国王政府，摩西（Moses）曾经警告过的...<br><br>
+
 <a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
-<a href= "pic07.html">House of Cards《纸牌屋》人物</a><br><br>
-<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
-更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
 
 <a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
-<a href= "pic01.html">天赋人权男女平等 </a><br><br>
-<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
-<a href= "pic03.html">各行其是而已</a><br><br>
-<a href= "pic04.html">日本的野心</a><br><br>
-<a href= "pic05.html">日本的男女</a><br><br>
-<a href= "pic06.html">Sorry！南京失守</a><br><br>
-
-
-
-
-
-			
-	<br><a href= "home.html">返回主页</a><br>
-	<hr>
-	
 
 	</font>
+
+	
+
 	<center>
+	<hr>
+
 	<font size=3>
-	version:2.1;&nbsp;jobnet@188.com&nbsp;&copy;&nbsp;<a href= "http://www.retter2012.com" title="点击进入">  retter2012.com </a> 
+	version:1.0;&nbsp;jobnet@188.com&nbsp;&copy;&nbsp;<a href= "http://www.retter2012.com" title="点击进入">  retter2012.com </a>
 	</font>	
 	</center>
 
-</body>
+	</body>
 
 </html>
+
+
+
+
+
+
+ 
