--- a/story02.html
+++ b/story02.html
@@ -223,6 +223,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
 　　随着中国对外交往的深入，英美法教育重受重视，这些饱受摧残的东吴学人又被起用。但这些东吴遗老平均年龄已逾70.在英美法教育被人为割断了30年后，我国在这方面后继乏人。今后还有没有合适人选出任国际大法官职务？中国驻海牙国际法院前法官倪征日奥先生深为忧虑。
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
+
 “英美法研究太弱了”
 <br><br>
 　　1993年，薛波正在中国政法大学读研究生，某天在查资料时，他和同学突然发现：国内居然没有一本适用的英汉《英美法词典》。
@@ -353,6 +357,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　 董必武的高度重视，使得执掌学界牛耳的杨兆龙对东吴大学法学院的未来充满信心。
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
+
 必须摧毁的目标
 <br><br>
 　　 仅仅两年后，东吴法学院乃至中国所有高校法学院系的命运，都在一场摧毁整个旧司法体系的行动中变得晦暗不清。在这场运动中，旧司法运转体系、司法教育体系都被设定为必须摧毁的目标。
@@ -423,6 +431,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　 即便是没有失去人身自由的，也被迫远离熟悉的专业，尚在讲坛上的，大多成了中学英语老师。于是，有人总结称，1949年后，留在大陆的东吴大学法学精英，"或者成为英语教师，或者成为劳改犯"。（《培养中国的近代法律家---东吴法学院》）
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
+
 断裂的传承
 <br><br>
 　　 此后，尽管中国仍然还存在着少数政法院校，但多年来讲授过的那些专业课程被彻底废止，而代以从新建的中国人民大学发源而来的"苏联式法律教育"，从北京到华东再到西南，覆盖了全国仅存的六家法学院系，讲台上的教师，也换成了苏联专家和一些"资深老干部"。
@@ -538,6 +550,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
     2001 年，万钢回到同济大学，担任校长助理、汽车学院院长、新能源汽车工程中心主任；2003年6月，他出任同济大学副校长，主持学校日常工作。2004年7月起，正式担任同济大学校长；2006年起，兼任上海市科协副主席；2006年12月，当选中国致公党中央副主席。
 <br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 	民主党派人士万钢:从黑五类子女到科技部长
 2007-05-16  南方报业(广州)　<br><br>
@@ -1345,6 +1358,8 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<b><a name="T3">香港的成长与烦恼</a> </b><br>
 	<hr><br>
 	
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》人物</a><br><br>
 	
 不确定的年代　难自主的命运<br><br>
 
@@ -1355,6 +1370,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 　　撒切尔夫人在1982年曾说过，收回香港将“带来灾难性的影响”，但中国恢复行使主权之后，极端情况并不曾发生，港人治港、高度自治、“马照跑、舞照跳”的承诺得到兑现。<br><br>
 
 　　不过，只说歌颂的套话也没什么意思，倒不如趁大家比较关注香港的时机，对香港的情况作一些梳理和反思。<br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 　　富裕的另一面，什么令香港蒙羞<br><br>
 
@@ -1396,6 +1412,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　惊人的成长：繁荣、法治从此启端
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
 　　十年中，进步惊人<br><br>
 
 　　对现状再多不满的港人，其实也不能回去适应1960年代的香港，因为现在确比当年好。
@@ -1409,6 +1428,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 　　想想这份上世纪70年代的清单：廉政公署成立；中文成为法定语文；启动长期建公屋和居者有其屋计划，后来共住进接近半数港人；九年强迫的免费基础教育；法定工人7天有薪假期；法定有薪分娩假期；制定解雇补偿等劳工保护法例；增加低价公共医疗；引进公共援助计划；制定男女平等的离婚法；成立环保、城市规划的部门；成立消费者保护机构；设劳工署调解劳资纠纷；设立大面积的法定郊野公园；发展卫星新城如荃湾、葵涌、屯门、沙田；1971年开通海底隧道连起港岛和九龙；圈地全力建地铁并在1979年启用；成立贸易发展局和生产力促进中心；吸纳社会精英进入咨询委员会，所谓行政吸纳政治；设立分区的民政署以加强官民沟通，了解民意；高级公务员开始本地化，政务官所谓首长级的官员中，1977年共337人，本地人占35.2％，共142人，1981年增至611人，本地人占45％，共258人，包括首长乙级的陈方安生和首长丙级的曾荫权；1982年成立区议会，分别代表香港18个区，议员部分直选；另外，1973年开始将部分市政管理和差饷收入下放给一个叫市政局的市议会，市政局财政自主，局内非官位议员一半由政府委任，另一半由具资格投票的市民一人一票直选，后来更发展到超过六成是直选的。<br><br>
 
 　　以工人法定有薪假期为例，当时商界和亲北京人士都大力反对，另外，反贪受到警务人员集体抗争，把廉政延伸到商界贪污时亦受到部分商界阻挠，抗拒的力量不可谓不大，但殖民地政府却不改初衷。当时很多政策如劳工安全法、解雇补偿、公共援助都受到部分商界反对，以至英国的费边社在1976年说世界上没人比香港商人对这些几乎放诸四海的改革更多过度反应。由此可看出殖民地政府面对本地某些特殊利益集团时有着强势的自主性。<br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 　　港英政府的理念———积极不干预<br><br>
 
@@ -1450,6 +1470,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　香港与内地之间的边防，在上世纪50年收紧，不过，内地人只要能到达香港市区，就可以成为本地居民，称为“抵垒政策”。内地三年灾害后期，大批粤人涌进香港，港人热泪盈眶地拿着干粮往新界北部接济他们，有如自己亲人，当时称他们为难民而不是非法移民。“文革”和1967年香港“反英抗暴”后港人心态有所改变，到1970年代，与经济快速增长配套的是本土文化兴起，加深了身份认同。到1980年，抵垒政策被取消，自此大陆人、香港人，合法移民、非法移民就分得清清楚楚，港人边界观念牢固化，对内地的心情却更是矛盾，欲迎还拒，输打赢要。
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
 　　基本法不可轻言修改
 <br><br>
 　　上世纪80年代对今日香港影响最大的，是1984年签署的中英联合声明和1985年开动、1990年初由全国人大通过的基本法。
@@ -1534,7 +1557,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　今年6月上旬，香港的律师会庆祝成立一百年，举办两项活动：百周年纪念杯跑马大赛及百周年志庆餐舞会。香港的文汇报标题说“律师会跑马跳舞庆百年”。对许多内地人来说，“马照跑、舞照跳”曾经是香港回归、平稳过渡的最通俗化表达。米字旗降下，五星红旗和紫荆花旗升起，两旗飘飘，见证了香港十年来不变的一面，确实值得祝贺。由现在一直到7月1日那天，香港将有不辍的庆祝活动，吸引世人再次慷慨地把目光投给香港。不过，当中外嘉宾和媒体兴尽离场后，香港还有很长的路要走。这个前殖民地虽只是一个小地方，经营起来也不比烹小鲜易，许许多多迫切的事情等着港人去完成：基本法的落实，特首和立法会普选的实现，加强特区政府的自主性和认受性，清除政府官员及商界精英在殖民地时期吸收的许多偏见，建构香港自己的方法和问题意识、，寻求符合香港的发展模式……香港一国两制的实验尚未完成，港人任重而道远。（录入：陈利明）
 <br><br>
-
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
  
 作者: 特约撰稿陈冠中发自香港  来源:南方周末   2007-06-21 <br><br>
 历史上曾有许多社会边缘人群被城市列为不受欢迎的异类：流浪汉、卖艺者、小商贩、异族人、无业农民，如此等等。现在香港人又为这个漫长的清单增添了一个新的类别：内地孕妇。<br><br>
@@ -1606,7 +1629,7 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
     1936年5月12日，胡汉民猝死广州，使得南京中央和以广东为首的西南联盟之间的固有矛盾顿时激化。6月1日，陈济棠联台桂系李宗仁，发动了借抗日以反蒋的“两广事变”。陈很自信，此次的“先发制人”，必可毕全功于一役，实现问鼎中原的夙愿。在此之前，其精通风水术数的五哥陈维周，网罗一批江湖术士，做了大量的“铺垫”工作。可笑的是，乩语“机不可失”和“草头倒，无人无人”，被陈理解为时运已到，倒蒋必成。而事实却恰成讽刺：由于陈的空军被蒋收买而率先叛逃，使陈痛失“良机”(飞机数十架)，以至局势急转直下，很快便不可收拾。<br><br>
 
 　　神话破灭了。紧接着，是“火药桶”的连续爆炸――西安事变，八年抗战，三年国共内争……“南天王”陈济棠，再也没有回到万人瞩目的“舞台”。<br><br>
-
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 福将儒将虎将
 <br><br>
     从广东陆军速成学校毕业后，22岁的陈济棠由机枪连排长干起，一路顺风顺水，直到45岁“荣升”一级陆军上将，成为主宰南天的一代枭雄。<br><br>
@@ -1631,6 +1654,12 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
     1933年2月15日，横跨珠江两岸的第一座大桥――海珠桥建成通车，这无疑又是陈三年计划的一个标志性成就。其余类似的“陈氏手笔”还有：广州市政府合署大楼、海珠新堤、洲头咀内港、西南航空公司、中山大学新校舍、市立气象台及30条新辟马路等。而于1934年开工，1937年落成的爱群大厦，便成了“陈济棠时代”的压轴之作。
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
 读经禁服
 <br><br>
     文化上的保守主义，是近代至民国时期军阀的共同特性，即使是在经济建设上颇为“前卫”的陈济棠也不例外。他对“国粹”的热爱可谓如痴如醉，至死不渝。
@@ -2145,6 +2174,9 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 
 
 有一个政治学术语叫“警察国家”(Police state)，在这样的国家，它的政府认为自己是人民的监护者，有法定权力，可以在缺乏法律程序的前提下，直接违反人民意愿，以行政力量控制人民，指导人民如何生活。
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》人物</a><br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 <br><br>
 自六月初，英国《卫报》及美国《华盛顿邮报》披露爱德华·斯诺顿揭露信息以来，美国秘密情报监测项目“棱镜”(PR ISM)在全球范围内激起轩然大波。美国、中国、香港、德国、英国、病倒等政治体不同程度地卷入其中，俨然2010年“维基解密”事件的翻版。现在，斯诺顿困居香港，中国政府态度暧昧，德国和英国政府连声质问，Google、Facebook等网络巨头红脸急辩，事起方奥巴马政府则结结巴巴，顾东言西。各方较力，俨然一副困局难破的局面。
@@ -2233,6 +2265,8 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 
 
 
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 
 
