--- a/story03.html
+++ b/story03.html
@@ -46,7 +46,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<a href="#T7">“性都”转型</a><br><br>
 	<a href="#T8">《风起》隐日军罪行</a><br><br>
 	<a href="#T9">普京期待俄成为“世界领袖”</a><br><br>
-	<a href="#T10">王岐山荐书《大清相国》</a><br><br>
+	<a href="#T10">王岐山荐《大清相国》和纸牌屋》</a><br><br>
 	<a href="#T11">House of Cards (U.S. TV series)</a><br><br>
 	<a href="#T12">对不起，当年我们没守住南京</a><br><br>
 	<a href="#T13">天下头号千古逆贼、卖国贼</a><br><br>
@@ -834,6 +834,14 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<b><a name="T6">“路姆西”见证反智泛民</a> </b><br>
 	<hr><br>
 	
+2013年12月7日香港特首梁振英在地区公众咨询会中有民众向他怒掷路姆西而成名，成为新一代“社运神兽”。 <br><br>
+路姆西（Lufsig）：「路姆西」由德國設計師Silke Leffler設計，靈感來自格林童話《小紅帽》中大野狼吃掉小紅帽祖母和小紅帽，獵人把大野狼肚子破開救出兩人，而「路姆西」身軀亦設計成中空，並配同祖母公仔出售。 <br><br>
+
+抢购<br><br>
+宜家家居的「毛公仔助学行动」，每售出一只毛公仔便捐10元给联合国儿童基金会和救助儿童会的儿童助学计划，而这款「路姆西」是毛公仔系列之一，标价99.9元，零售价则只要80多元。宜家发言人表示，本港出售的毛公仔不设中文译名，这款野狼公仔叫Lufsig。但公仔标签写有其内地译名「路姆西」，而这款公仔成为投掷梁振英的「武器」后人气大旺，存货悉数售罄，有网民表示昨午到铜锣湾分店，补货后不足15分钟已被抢购一空。<br><br>
+“路姆西”是一只狼形毛公仔，其大嘴张开形似在笑，穿红白格子衬衣及牛仔裤，手抱一个老太婆。“路姆西”由德国设计师Silke Leffler设计，它个性腼腆，家境贫困，好学，每天日出而作，负责派送牛奶及报纸，希望通过上学成为了不起的人；老太婆是一位充满智慧的老师。“路姆西”和市面上发售的公仔没有太大区别，是它的中文译名“路姆西”让粤语地区的人士大感兴趣，进而抢购。<br><br>
+
+
 
 2013-12-11  大公网 <br><br>
 就政府开始的一系列政改咨询，特首梁振英频频“落区”，以期能够更直接地听到市民的意见，然此举却遭到激进反对派的搅局，引起混乱。很多香港人从来只是盲目跟风，其羊群心理真的能“扬威海外”，并且非常幼稚。
@@ -884,6 +892,45 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
    此外，路姆西热潮亦引起外地媒体关注，连瑞典传媒亦引述法新社有关路姆西在港窜红的报道，美国新闻网站《赫芬顿报》刊载了中大新闻与传播学院讲师陈婉雯的报道，指路姆西已成为香港反政府的标记。该篇报道指，路姆西是广东话粗口谐音，香港市民以之掉梁振英，是以行动反映对政府的不满，以及对普选特首的渴望，报道又指出，路姆西是港人以黑色幽默，苦中作乐。
 <br><br>
+
+羊城晚报讯 记者梁怿韬摄影报道：“取错名”未必是坏事。瑞典家具品牌宜家家居发售一只狼形毛公仔，其中文名“路姆西”的粤语发音与某句粤语粗口相似，近日反而在穗港走红。昨天，羊城晚报记者前往宜家家居广州天河分店，发现该毛公仔早已售罄。在网上，该公仔持续成为网络热词，不少网友以“送你路姆西”、“丢你路姆西”的心态，搬弄抢购而来的毛公仔。<br><br>
+
+　　中文译名像粤语粗口？<br><br>
+
+　　宜家家居发售的这只毛公仔，外文原名为“Lufsig”，在中国大陆，被店方译为“路姆西”。<br><br>
+
+　　根据宜家家居官方网站的信息，“路姆西”是一只狼形毛公仔，其大嘴张开形似在笑，穿红白格子衬衣及牛仔裤，手抱一个老太婆。“路姆西”由德国设计师Silke Leffler设计，它个性腼腆，家境贫困，好学，每天日出而作，负责派送牛奶及报纸，希望通过上学成为了不起的人；老太婆是一位充满智慧的老师。<br><br>
+
+　　“路姆西”和市面上发售的公仔没有太大区别，是它的中文译名“路姆西”让粤语地区的人士大感兴趣，进而抢购。<br><br> 
+
+　　昨天中午，记者来到宜家家居位于广州东站的门店。该店负一层售卖宜家当季的毛公仔，记者并没看到“路姆西”的身影，“早就卖完了”，店员表示，记者如果早来一天，可以看到顾客抢购“路姆西”的盛况，“昨天，好多人到毛公仔区，都是买‘路姆西’的，一下子全卖光了。”记者看到不少顾客得知“路姆西”卖光后流露出失望的表情。<br><br>
+
+　　“路姆西”在香港同样遭抢购。据香港媒体报道，至9日中午12点，全香港宜家门店只剩1000多只“路姆西”发售，到下午4时已有门店告售罄，店方需要补货；黄昏时分打工仔下班后加入抢购，店方要派筹疏导。<br><br>
+
+　　由于广州和香港两地的“路姆西”纷纷售罄，不少两地市民转战到深圳继续抢购；在网上，天津、上海、北京的网友，看到粤语地区的抢购热潮，发帖征“代购”生意。
+<br><br>
+　　买“路姆西”为“恶搞”<br><br>
+
+　　记者发现，调侃和恶搞甚至发泄不满，成为粤语地区市民抢购的主因。<br><br>
+
+　　在新浪微博搜索“路姆西”，记者发现一个段子：“圣诞送礼送啥好?送你路姆西!情人爱侣吵架怎么办?丢他路姆西!朋友反骨，丢他路姆西!送上司、送领导、送朋友、送爱侣、送亲戚，送他路姆西!”据悉，在香港已经有市民将“路姆西”视为针砭时弊的对象，将“路姆西”以投掷的方式“送”给官员，作为“雷人礼物”。<br><br>
+
+　　根据网友们在微博的留言，记者发现“路姆西”的粤语发音虽然与粗口相近，但其形象是一只狼形毛公仔，也有父母购买给小朋友玩，宜家家居对“路姆西”的说明称，“所有毛绒玩具抱起来都手感舒适，是孩子倾吐心声的对象，也是他们游戏、淘气的玩伴”。<br><br>
+
+　　梁怿韬<br><br>
+
+ 記者杜琪報道  宜家家居為毛公仔助學行動推出的野狠公仔「路姆西」（Lufsig），自上周六被社民連成員陳德章擲向出席地區諮詢會的特首梁振英後，結果「一掟成名」，全城瘋搶！香港宜家家居旗下三間分店存貨被盡掃一空，其中九龍灣分店昨日便出現搶購人龍，逾400件貨品在10分鐘內遭搶光，更有巿民大手入貨，一次購買200隻，不少學生和市民趕至也失望而回；不少人則在網上拍賣這個毛公仔，開價150元，較售價貴近一倍，亦有網友為諷刺特首，在網上開價「689」元。<br><br>
+
+　　一擲成名 人氣大旺<br><br>
+
+　　宜家家居的「毛公仔助學行動」，每售出一隻毛公仔便捐10元給聯合國兒童基金會和救助兒童會的兒童助學計劃，而這款「路姆西」是毛公仔系列之一，標價99.9元，零售價則只要80多元。宜家發言人表示，本港出售的毛公仔不設中文譯名，這款野狼公仔叫Lufsig。但公仔標籤寫有其內地譯名「路姆西」，而這款公仔成為投擲梁振英的「武器」後人氣大旺，存貨悉數售罄，有網民表示昨午到銅鑼灣分店，補貨後不足15分鐘已被搶購一空。<br><br>
+
+　　記者昨到九龍灣分店，職員透露尚有400多件貨物，並把所有「路姆西」集中在收銀處，數十名市民趕至，4時許一開賣，不足10分鐘都被搶光，成功買到一隻的Ken表示很開心，並透露排在他前面的市民入貨200件；有市民說公仔造型「得意」，網民則大讚「路姆西」是「倒梁吉祥物」。<br><br>
+
+　　張先生昨趕到宜家，得知缺貨後大感失望，表示會上網訂購，有市民更與職員理論，認為應限制顧客購買數量；有拍賣網站已有人將「路姆西」放售，開價最少150元，較零售價80多元貴近一倍。宜家發言人表示，沙田店及銅鑼灣店會今日會補充「極少量」貨，之後要下月上旬才有新貨抵港。<br><br>
+
+　　「路姆西」由德國設計師Silke Leffler設計，靈感來自格林童話《小紅帽》中大野狼吃掉小紅帽祖母和小紅帽，獵人把大野狼肚子破開救出兩人，而「路姆西」身軀亦設計成中空，並配同祖母公仔出售。<br><br>
+
 
 	<br>
 		<br><a href="#top">返回页首</a><br>
@@ -1120,7 +1167,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
 	
 	<br>
-	<b><a name="T10">王岐山荐书《大清相国》</a> </b><br>
+	<b><a name="T10">王岐山荐《大清相国》和纸牌屋》</a> </b><br>
 	<hr><br>
 	
 王岐山荐书《大清相国》被网络雪藏很久，如今又被爆炒。<br><br>
@@ -1197,6 +1244,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　不仅是历史书籍，产业前瞻与未来变化的著作也同样受到重视。国务院总理李克强曾经推荐的《第三次工业革命》就为外界津津乐道，该书作者发现历史上数次重大的经济革命都是在新的通信技术和新的能源系统结合之际发生的。当互联网技术和可再生能源结合起来，就会为第三次工业革命创造强大的新基础设施。
 <br><br>
+
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
+
 　　领导人书缘
 <br><br>
 　　新中国建立以来，爱书、荐书的领导人不胜枚举，尤其是毛泽东，爱书如命，多年居住的中南海丰泽园内就有菊香书屋，其藏书之多、读书之勤、荐书之广世所罕见。邓小平也是酷爱读书，除了传统经典著作外，他喜欢阅读的书还包括新派武侠小说，像古龙、金庸和梁羽生的都看。
