--- a/pic07.html
+++ b/pic07.html
@@ -57,6 +57,8 @@ G-string与T-back都是丁字裤<br><br>
 G-STRING在股沟位置来了场更彻底的革命，收缩成仅为一厘米宽绳状设计，使你穿紧身衣时更无任何痕迹可寻，且绳状宽度恰到好处地使你自在又无任何束缚之感。<br><br>
 
 <a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
+
 <a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
 
 <a href= "pic01.html">天赋人权男女平等 </a><br><br>
