--- a/story01.html
+++ b/story01.html
@@ -51,7 +51,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<a href="#T12">Lady Gaga随风散去？</a><br><br>
 	<a href="#T13">俄罗斯的大国游戏</a><br><br>
 	<a href="#T14">《饥饿的女儿》虹影</a><br><br>
-	<a href="#T15">大英帝国的直布罗陀</a><br><br>
+	<a href="#T15">从托尔斯泰反观乔伊斯小说</a><br><br>
 	<a href="#T16">橄榄球在中国怎么还火不起来</a><br><br>
 	<a href="#T17">怎样全方位读书</a><br><br>
 	<a href="#T18">买足球鞋不容易</a><br><br>
@@ -74,6 +74,7 @@ Rihanna迫切地在Instagram上与大家分享了她惹人嫉妒的礼物，并同时以简短的文字回复了
 <a href= "pic03.html">各行其是而已</a><br><br>
 <a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
+<a href= "pic08.html">路姆西（Lufsig）和摩西（Moses）</a><br><br>
 
 三大奢侈品集团品牌争夺战<br><br>
 
@@ -1185,6 +1186,15 @@ Lady Gaga是与H&M合作的最新时尚明星，然而与Lanvin、Versace和Isabel Marant不同，她
 
 <br><br>
 
+	<br>
+		<br><a href="#top">返回页首</a><br>
+	<hr>
+
+
+	
+	<br>
+	<b><a name="T15">从托尔斯泰反观乔伊斯小说</a> </b><br>
+	<hr><br>
 <a href= "pic01.html">天赋人权男女平等 </a><br><br>
 <a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
 <a href= "pic03.html">各行其是而已</a><br><br>
@@ -1324,6 +1334,7 @@ If asked who is the most complete character in literature since Shakespeare and 
 
 二0一三年三月九日写于哈德逊河畔
 <br><br>
+
 	<br>
 		<br><a href="#top">返回页首</a><br>
 	<hr>
