--- a/link03.html
+++ b/link03.html
@@ -58,7 +58,7 @@ Robber Barons.<br><br>
 更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
 Severn Cullis-Suzuki was born and raised in Vancouver, British Columbia. Her mother is a writer (French) and father David Suzuki（铃木） a third-generation Japanese Canadian. While attending Elementary School in French Immersion, at age 9, she founded the ECO. In 1992, at age 12, she raised money with members of ECO to attend the Earth Summit in Rio de Janeiro. <br><br>
-2020东京申奥奥滝雅美用法语演讲。Takigawa Lardux Christel Masami was born in Paris, her father is French, mother is Japanese. <br><br>
+2020东京申奥滝川雅美用法语演讲。Takigawa Lardux Christel Masami was born in Paris, her father is French, mother is Japanese. <br><br>
 
 文革期间，王沪宁没有下乡精通法语、万钢下乡搞定德语、刘亚洲参军学会英语。所以，要至少一门外语。最差也要像李嘉诚一样学点粤语吧？Hong Kong News Agora<br><br>
 
