--- a/story02.html
+++ b/story02.html
@@ -476,7 +476,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
 	文革期间，王沪宁没有下乡精通法语、万钢下乡搞定德语、刘亚洲参军学会英语。所以，要至少一门外语。最差也要像李嘉诚一样学点粤语吧？HongKong News Agora<br><br>
 
-	上海交通大学的Borau来自德国西部Saar（靠近法国洛林，德法双语区），用英语和德语教学（Borau是英语文学Ph. D.）。完全用英语教授德语，可以完全忘记母语（汉语），效果很好。Borau不懂中文，采用Passswort Deutsch《周边德国》作为教材，全德语。当然，不要忘了都德的名著《最后一课》。笔者曾经碰到一个瑞士人（母亲为意大利人，父亲讲德育，会德语、法语、英语和意大利语）问她为什么法语区的人不学德语。答曰：讲法语的人懒！换句话，中国精英或211大学内懂得藏语、维吾尔语、阿拉伯语、蒙古语的人有几个？大不列颠当日不落帝国的时候，要求政府职员至少会一种当地语言的。晋商和十三行都会外语的，讲客户的语言是常识来的。<br><br>
+	上海交通大学的Borau来自德国西部Saar（靠近法国洛林，德法双语区），用英语和德语教学（Borau是英语文学Ph. D.）。完全用英语教授德语，可以完全忘记母语（汉语），效果很好。Borau不懂中文，采用Passswort Deutsch《周边德国》作为教材，全德语。当然，不要忘了都德的名著《最后一课》。笔者曾经碰到一个瑞士人（母亲为意大利人，父亲讲德语，他本人会德语、法语、英语和意大利语）问她为什么法语区的人不学德语。答曰：讲法语的人懒！换句话，中国精英或211大学内懂得藏语、维吾尔语、阿拉伯语、蒙古语的人有几个？大不列颠当日不落帝国的时候，要求政府职员至少会一种当地语言的。晋商和十三行都会外语的，讲客户的语言是常识来的。<br><br>
 	张五常也要大家学好英文。<br><br>
 	王沪宁：文革可以“病假”不下乡在家自学而后在上海进工厂学徒，1974年19岁被作为“工农兵学员”推荐到华东师范大学西语系（上海师范大学干校外语培训班）学习法语（Robespierre），从师《资本论》陈其人，喜欢尼采（Nietzsche），酷爱读书。93年复旦大专辩论蒋昌建。王沪宁被称为中国第一智囊、新保守（Conservative）主义教父、政治化妆师（Spin Doctor, Play Doctor, Juris Doctor）。戈贝尔（Goebbels），戴季陶或Karl Rove。卢沛宁是Obama的铁哥们，但中国背景让他不能进入核心而只能做白宫内阁秘书长（Cabinet Secretary）。这般低声下气，只有我国河南人做得出来。人文社科欠账太多。广州执信中学高中，一个女同学喜欢文科并要去港大学法律或经济，但没有选文科班。选执信是因为英语好（女校），但图书馆（Libraey）没有原版专业书可读。<br><br>
 
@@ -2217,6 +2217,30 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 
 
+FT社评：NSA监听计划遭遇翻盘  <br><br>
+英国《金融时报》 社评 <br><br>
+
+2013年12月18日 <br><br>
+
+ 
+
+
+
+美国国家安全局(NSA)前合同工爱德华 斯诺登(Edward Snowden)的爆料，导致NSA实施大规模监控的权力在过去半年里屡受批评。但其中杀伤力最大的，还数哥伦比亚特区地方法院法官理查德 利昂(Richard Leon)本周的发难。<br><br>
+
+本周，在一起由两位法律人士发起的诉讼中，法官利昂对NSA最近7年来收集美国人通话数据的计划是否违反美国宪法做出了裁定。利昂表示，“该行为几乎肯定”违宪。他将NSA系统性收集通话数据的权力描述为“简直是奥威尔式的”，肯定会让美国宪法的起草者詹姆斯 麦迪逊(James Madison)“瞠目结舌”（假如他在世的话）。此番炮轰言论外更为令人瞩目的一点是，发难者为小布什(George W Bush)任命的法官。<br><br>
+
+利昂法官审视的实则是个很大的问题，即NSA对元数据(metadata)的收集权——即谁在何时给谁打了多久的电话。NSA的辩护者认为，获取电话元数据的行为只能让NSA了解通话的背景信息，并在潜在恐怖分子之间建立起联系。NSA并不能获取具体通话内容。<br><br>
+
+但利昂法官的具体关注点是，NSA可以批量收集美国人的通话记录，并且保留5年。他认为，如今手机和平板电脑在美国人生活中发挥着巨大的作用，因此这种大规模收集元数据的行为不仅对个人信息有侵犯性，而且容易被滥用。他表示，NSA“每天不加鉴别地收集各个领域的海量”手机数据，而其中很多数据来自千百万不可能与恐怖主义活动有任何关联的美国人。利昂法官还指出，美国政府出示的证据中“没有任何事例可证明，利用NSA所收集海量元数据进行的分析阻止了一起迫在眉睫的袭击”。<br><br>
+
+
+
+利昂法官表示，NSA可以继续实施这项计划，直到6个月后的上诉。奥巴马(Obama)政府可利用这段时间准备可证明收集元数据活动合理性的证据，否则就得承认NSA的行为规则必须改革。<br><br>
+
+一些改革者的提议是，NSA应当彻底放弃对元数据的收集和存储。相反，这些数据应由相关电话公司或第三方机构保管。根据这项改革提议，NSA必须按照远高于现行要求的标准来证明自己需要这些信息，才能获得这些信息。<br><br>
+
+NSA抱怨称，这样的改革将降低其反恐行动的速度和效率。这需要认真的讨论，特别是考虑到NSA未来可能将被迫追踪不同的数据来源，而不是依赖现有的数据库。NSA要对一些严肃的问题做出回答。留给它为现状做出有力辩护的时间已经不多了。<br><br>
 
 
 
@@ -2336,6 +2360,53 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 
 
 
+中美舰机南海多次对峙（辽宁号航母）<br><br>
+大公网2013-12-15<br><br>
+2013年12月5日，美军巡洋舰“考彭斯”号（导弹巡洋舰Cowpens）在南海监视“辽宁”舰时，被中国军舰逼开。<br><br>
+
+
+2009年6月的“麦凯恩号驱逐舰撞船事件”中，美海军“麦凯恩”号导弹驱逐舰的声纳与中国潜艇发生碰撞。<br><br>
+2009年3月的“无瑕号事件”中，“无瑕”号水声测量船试图获取中国潜艇的声纹资讯或对南海水文情况进行勘测。<br><br>
+
+２００９年３月，美国间谍船“无瑕号”在中国的海南岛南部，约７５海里的海域，带着１８００米长的拖曳线列阵声纳，收集中国的各种情报。中国出动渔政海事舰艇等劝其停止损害中国安全的行动，其以高压水龙枪相击。３月９日，美国国务院向中国抗议，指责中国骚扰“无瑕号”在国际海域执行例行任务。中国外交部立即回应，根据《联合国海洋法公约》，主权国家邻海２００海里的区域，是该国的专属经济区。任何国家的船只在专属经济区海域，只能无害通过。“无瑕号”违犯了这个公约。同日，中国外交部长杨洁篪开始访问美国，会晤国务卿希拉里和总统奥巴马，就这个问题进行了磋商，双方达成共识。在随后的新闻发布会上，国务卿希拉里表示需要降低两国间的这种紧张状态，加强对话，避免类似的事情决再次发生。然而，第二天，美国参谋长联席会议主席麦克马伦公开宣称，美国有权进入这片海域，中国无权干涉其行动自由。美国军方派遣“钟云”号导弹驱逐舰为“无瑕号”护航，声称必要时，击沉中国船只。<br><br>
+
+
+2001年的“南海撞机”事件中，撞毁中方歼8的美军EP3C侦察机正执行对解放军位于海南的军事通讯监听任务。<br><br>
+
+Never believe anything in politics until it has been officially denied. Otto von Bismarck <br><br>
+
+东风-41覆盖美国全境，美军反导拦截困难<br><br>
+2013年12月18日 新浪军事<br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+美国《华盛顿自由灯塔报》报道，上周五(2013年12月13日)，中国二炮部队在中国山西省中部某导弹基地进行了东风-41洲际导弹最新试射。这是中国东风-41公路机动洲际弹道导弹的第二次试射。 <br><br>
+DF-41被认为是中国最新型的洲际弹道导弹，在射程、精度和多弹头能力上超过DF-31A型，并配备了更先进的移动式发射车。据《汉和防务评论》说DF-41(东风-41)洲际导弹在2012年7月的试射中，并没有采取全程试射。<br><br>
+
+DF-41洲际导弹可能采用了最新一代的中国大推力固体火箭技术，射程可能达到14000公里左右，覆盖美国全境，其综合作战技术水平基本达到了美国的“民兵”和“三叉戟”D5的水平。<br><br>
+
+
+　　要想知道中国的战略导弹威力如何，这是一个极为秘密的事情。而美国媒体今日报道出了，上周五也就是12月13日，中国二炮部队在中国山西省中部某导弹基地进行了东风-41洲际导弹最新试射。这是中国东风-41公路机动洲际弹道导弹的第二次试射。<br><br>
+
+　　中国正在持续壮大发展自己的战略导弹家族，如果说，此前中国拥有的能够打到美国的大多是单弹头洲际弹道导弹，如东风-31A和东风-5A，那现在作为对美国国家导弹防御系统研制计划的回应，中国军队的核遏制武库中出现了一种能够携带更多分导弹头的导弹-东风-41洲际弹道导弹。<br><br>
+
+　　由于中国人民解放军暂时没有公布东风-41的具体数据，只能依据国外媒体给出数据进行猜测了。东风-41将携带多达10个分导式核弹头，采用陆基机动部署的东风-41洲际弹道导弹因为采用多个分导式主动制导弹头，因此具备较强的突防能力，可使用模拟假目标对抗敌方的反导系统。该技术并非是简单地在一枚导弹上装载多枚集束式分弹头，而是在飞行弹道末端根据不同的打击目标逐个释放重返大气层载具，也就是让每个分弹头都有独立的飞行弹道，使其攻击不同的目标，这就大大增加了敌方反导防御系统的拦截难度。<br><br>
+
+　　这样的打击模式，再加上东风-41导弹采用了陆基机动发射部署模式，因而使得其很难被敌方准确侦测到并且很难被拦截。但为了躲避反导拦截，中国还为该导弹专门研发了诱饵弹头，上面配备热、光电装置，这些装置设计用来诱骗导弹防御系统。一旦可携带10枚弹头的东风-41列装，美国所需拦截导弹的数量就会成倍数增长。 <br><br>
+
+　　东风-41型洲际弹道导弹均采用三级固体运载火箭作动力，其载车能在公路进行机动，提高在敌方发动第一次核打击时的生存力。另一方面，该型导弹采用了电脑控制的惯性制导系统，命中精度得到大幅提高。若配用多弹头分导重返大气层方式进行攻击，以西方目前技术是无法进行拦截的。<br><br>
+
+　　而据《汉和防务评论》说，DF-41(东风-41)洲际导弹在2012年7月的试射中，并没有采取全程试射。此外，《汉和防务评论》认为，DF-41洲际导弹采用了最新一代的中国大推力固体火箭技术。DF-31A也同时采用了该技术进行了改进。这意味着第四代火箭发动机是在第三代火箭改良而出的。其综合作战技术水平达到了美国的“民兵”和“三叉戟”D5的水平。换句话会说DF-41就是美国第四代战略核导弹的水平。<br><br>
+
+　　由于采用三级固体燃料的DF-41，所以比DF-31还要大，并且拥有10000到15000千米的射程。迄今为止还没有任何公开资料提及这种新型导弹的结构，据推测其很可能是在DF-31基础上加大了第三级推进火箭改进而来。DF-41的射程更加遥远，所以弹体也设计成了比较长，并且使用更大的第三级火箭推动器。同时配套的机动发射系统将极大提高该导弹的生存能力。<br><br>
+
+　　这么大的射程可以使得中国为东风-41洲际导弹规划出特别的攻击路径。从北、东、西三个方向打击美国本土。一个从俄罗斯西伯利亚地区飞出，通过加拿大上空，路过北美防空司令部，第二个通过太平洋航路进入到北美防空司令部的阿拉斯加拦截系统，但是这里的拦截弹并不是主要拦截中国方向的，而是拦截朝鲜或者俄罗斯方向的。最后一个方向是从亚洲大陆飞向非洲大陆，横跨大西洋直击美国首都华盛顿和经济中心纽约。这个方向看似很远，但是毕竟打击的是美国核心地带，很容易实现战略突防。并且在这个方向美国人是无法将反导系统部署在非洲或者亚洲的，它只能通过部署海上力量比如“宙斯盾”级驱逐舰进行中段拦截，但这种拦截难度较大，这对于东风-41洲际导弹来说是一个难得的突破机会。避开反导系统的拦截，确保最佳的反击作战能力。<br><br>
+
+　　东风-41洲际导弹采用了公路机动平台，铁路机动平台和加固地井发射三种方式部署，其中公路机动平台为陕西特种汽车制造厂生产的SX-4320重型牵引车，它集储存-运输-发射一体化三用半拖车，导弹置于拖车的弹舱内，在运输状态下呈封闭状态。导弹通过液压装置起竖发射。由于东风-41弹体重量巨大，已经达到了公路机动平台所能承受的极限，所以放弃了较复杂的冷发射而采用热发射，与冷发射相比，热发射对导弹本身的固体火箭发动机的质量要求较高，但是节省了发射载车上的有限空间。从未经证实的消息看，东风-41洲际导弹经过了火车搭载实验，未来极有可能部署在火车上进行发射，从1986年以来，俄战略导弹部队共部署了36枚SS-24洲际弹道，它们都装在一辆由3台内燃机车和多节车厢组成的列车上。弹道导弹铁路机动发射时，要求导弹应能实现全方位发射。铁路线路的方向是因地而异的，机动途中的列车如在任一点都能实施发射，无论列车朝向如何，都能保证导弹在起飞后，自行准备飞向目标。所以，未来东风-41洲际导弹也是可以考虑火车发射形式的。<br><br>
+
+　　根据东风-31A洲际导弹的生产和服役情况，东风-41洲际导弹将会在大约2020年投入现役。如果中国二炮部队装备100枚东风-41洲际导弹，那么，中国未来的核打击力量将会出现一次核打击投入1000枚核弹的巨大威慑力量。其实核导弹最有威力的地方并不是打击后产生的核爆炸，而是平常的真实存在。<br><br>
+
+　　如果东风-41洲际导弹如期服役，那么将改变我国未来的战略核力量。现阶段，我国唯一震慑美国的核战略导弹只有东风-5型(15000公里的射程覆盖美国全境)。同时，中美两国之间的战略摩擦不断加深，核战略力量差距使得中国时刻保持着紧张感。所以中国战略核力量需要加快进行部署，努力构建战略平衡，避免美国进行核讹诈。中国核导弹力量将会是未来达摩克利斯之剑一样悬在美国人的头上。东风-41洲际导弹的出现将会令美国的反导系统弃之无用留之可惜，也会令美国人再也不敢轻易的挑衅，成为保护中国国土安全不受侵犯的又一把利剑。<br><br>
 
 
 	<br>
